--- a/actions/trigger-platform-deployment/action.yml
+++ b/actions/trigger-platform-deployment/action.yml
@@ -26,11 +26,8 @@ inputs:
     description: 'Path to Terraform configuration'
     required: false
     default: 'infrastructure'
-  aws-access-key-id:
-    description: 'AWS Access Key ID for role validation'
-    required: true
-  aws-secret-access-key:
-    description: 'AWS Secret Access Key for role validation'
+  aws-account-id:
+    description: 'AWS Account ID for validation'
     required: true
   aws-region:
     description: 'AWS region'
@@ -55,11 +52,11 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials (Platform Team Role)
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+        role-to-assume: arn:aws:iam::${{ inputs.aws-account-id }}:role/github-actions-platform-team-role
+        role-session-name: CustomActionValidation
         aws-region: ${{ inputs.aws-region }}
     
     - name: Validate and extract from ARN
@@ -69,19 +66,40 @@ runs:
         echo "Caller ARN: ${{ inputs.caller-arn }}"
         
         # Validate ARN format and extract components
+        # Handle both IAM role ARN and STS assumed role ARN formats
         if [[ "${{ inputs.caller-arn }}" =~ arn:aws:iam::([0-9]+):role/([^/]+) ]]; then
+          # Direct IAM role ARN format
           ACCOUNT_ID="${BASH_REMATCH[1]}"
           ROLE_NAME="${BASH_REMATCH[2]}"
+          echo "Detected IAM Role ARN format"
           echo "Extracted Account ID: $ACCOUNT_ID"
           echo "Extracted Role Name: $ROLE_NAME"
+        elif [[ "${{ inputs.caller-arn }}" =~ arn:aws:sts::([0-9]+):assumed-role/([^/]+)/([^/]+) ]]; then
+          # STS assumed role ARN format (from OIDC)
+          ACCOUNT_ID="${BASH_REMATCH[1]}"
+          ROLE_NAME="${BASH_REMATCH[2]}"
+          SESSION_NAME="${BASH_REMATCH[3]}"
+          echo "Detected STS Assumed Role ARN format"
+          echo "Extracted Account ID: $ACCOUNT_ID"
+          echo "Extracted Role Name: $ROLE_NAME"
+          echo "Session Name: $SESSION_NAME"
         else
           echo "❌ Invalid ARN format: ${{ inputs.caller-arn }}"
+          echo "Expected either:"
+          echo "  - arn:aws:iam::ACCOUNT:role/ROLE_NAME"
+          echo "  - arn:aws:sts::ACCOUNT:assumed-role/ROLE_NAME/SESSION_NAME"
           exit 1
         fi
         
         # Validate environment
         if [[ ! "${{ inputs.environment }}" =~ ^(dev|staging|prod)$ ]]; then
           echo "❌ Invalid environment. Must be dev, staging, or prod"
+          exit 1
+        fi
+        
+        # Validate account ID matches expected
+        if [ "$ACCOUNT_ID" != "${{ inputs.aws-account-id }}" ]; then
+          echo "❌ Account ID mismatch. Expected: ${{ inputs.aws-account-id }}, Got: $ACCOUNT_ID"
           exit 1
         fi
         
