Added manual repo clone to action

--- a/.github/actions/trigger-secret-sharing/action.yml
+++ b/.github/actions/trigger-secret-sharing/action.yml
@@ -27,7 +27,7 @@ runs:
   using: "composite"
   steps:
     - name: Checkout Platform Repo
-      uses: actions/checkout@v4
+      run: git clone ${{ github.repository_url }} .
       shell: bash
 
     - name: Set up Terraform
