--- a/.github/actions/trigger-secret-sharing/action.yml
+++ b/.github/actions/trigger-secret-sharing/action.yml
@@ -21,8 +21,7 @@ inputs:
 
 outputs:
   api_gateway_url:
-    description: "The URL of the provisioned API Gateway"
-    value: ${{ steps.get_url.outputs.api_gateway_url }}
+    description: "The URL of the provisioned API Gateway."
 
 runs:
   using: "composite"
@@ -31,25 +30,24 @@ runs:
       uses: actions/checkout@v4
 
     - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.7.0
-
-    - name: Terraform Init
+      shell: bash
       working-directory: terraform/secret-sharing
       run: terraform init
 
     - name: Terraform Apply
+      shell: bash
       working-directory: terraform/secret-sharing
-      run: terraform apply -auto-approve \
-        -var="product_name=${{ inputs.product_name }}" \
-        -var="env=${{ inputs.env }}" \
-        -var="contact_email=${{ inputs.contact_email }}" \
-        -var="contact_name=${{ inputs.contact_name }}" \
-        -var="accepted_partner_ids=${{ inputs.accepted_partner_ids }}"
+      run: |
+        terraform apply -auto-approve \
+          -var="product_name=${{ inputs.product_name }}" \
+          -var="env=${{ inputs.env }}" \
+          -var="contact_email=${{ inputs.contact_email }}" \
+          -var="contact_name=${{ inputs.contact_name }}" \
+          -var="accepted_partner_ids=${{ inputs.accepted_partner_ids }}"
 
     - name: Get API Gateway URL
       id: get_url
+      shell: bash
       working-directory: terraform/secret-sharing
       run: |
         URL=$(terraform output -raw api_gateway_url)
