--- a/.github/actions/trigger-secret-sharing/action.yml
+++ b/.github/actions/trigger-secret-sharing/action.yml
@@ -48,10 +48,10 @@ runs:
 
     - name: Build & Push Docker Image
       shell: bash
+      working-directory: platform-repo/lambda/secret_sharing_service
       run: |
         IMAGE_URI="957129869060.dkr.ecr.eu-west-1.amazonaws.com/ecr-mercury-dev-euwe1-shared-service_secret-sharing:latest"
-        echo "Building and pushing image: $IMAGE_URI"
-        docker build --provenance=false --platform linux/arm64 -t $IMAGE_URI platform-repo/lambda/secret_sharing_service
+        docker build --provenance=false --platform linux/arm64 -t $IMAGE_URI .
         docker push $IMAGE_URI
 
     - name: Terraform Init
