--- a/lambda/secret-sharing-service/Dockerfile
+++ b/lambda/secret-sharing-service/Dockerfile
@@ -1,20 +1,19 @@
-# Stage 0: Pull UV binary
-FROM ghcr.io/astral-sh/uv:0.8.11 AS uv
+# Stage 0: Use uv for dependency installation (force x86_64)
+FROM --platform=linux/amd64 ghcr.io/astral-sh/uv:0.8.11 AS uv
 
 # Stage 1: Lambda base image
 FROM public.ecr.aws/lambda/python:3.12
 
-# Set working directory
 WORKDIR ${LAMBDA_TASK_ROOT}
 
-# Copy uv binary and make it executable
+# Copy uv binary from stage 0
 COPY --from=uv /uv /bin/uv
 RUN chmod +x /bin/uv
 
-# Copy Python dependencies descriptors
+# Copy Python dependency descriptors
 COPY pyproject.toml ./
 
-# Install dependencies via uv
+# Install dependencies into Lambda folder
 RUN /bin/uv pip install --no-cache-dir --target . .
 
 # Copy Lambda function code
