--- a/lambda/secret-sharing-service/Dockerfile
+++ b/lambda/secret-sharing-service/Dockerfile
@@ -1,17 +1,14 @@
-# Stage 1: Lambda base image - using the same base for both stages ensures architecture compatibility
-FROM public.ecr.aws/lambda/python:3.12 as base
-
-# Stage 2: Install uv in a builder stage
-FROM base as builder
+# Stage 1: Use Python image for building uv
+FROM python:3.12-slim as builder
 RUN pip install --no-cache-dir uv==0.8.11
 
-# Stage 3: Final image
-FROM base
+# Stage 2: Final Lambda image
+FROM public.ecr.aws/lambda/python:3.12
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
 # Copy uv from builder stage
-COPY --from=builder /var/lang/bin/uv /bin/uv
+COPY --from=builder /usr/local/bin/uv /bin/uv
 
 # Copy Python dependency descriptors
 COPY pyproject.toml uv.lock ./
