--- a/lambda/secret-sharing-service/Dockerfile
+++ b/lambda/secret-sharing-service/Dockerfile
@@ -1,19 +1,15 @@
-# Stage 1: Use Python image for building uv
-FROM python:3.12-slim as builder
-RUN pip install --no-cache-dir uv==0.8.11
-
-# Stage 2: Final Lambda image
+# Single stage build for better compatibility
 FROM public.ecr.aws/lambda/python:3.12
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
-# Copy uv from builder stage
-COPY --from=builder /usr/local/bin/uv /bin/uv
+# Install uv using pip
+RUN pip install --no-cache-dir uv==0.8.11
 
 # Copy Python dependency descriptor
 COPY pyproject.toml ./
 
-# Generate lock file and install dependencies
+# Install dependencies
 RUN uv pip install --no-cache-dir --target . .
 
 # Copy Lambda function code
