--- a/lambda/secret-sharing-service/Dockerfile
+++ b/lambda/secret-sharing-service/Dockerfile
@@ -4,7 +4,7 @@ FROM public.ecr.aws/lambda/python:3.12
 WORKDIR ${LAMBDA_TASK_ROOT}
 
 # Install uv using pip
-RUN pip install --no-cache-dir uv==0.8.11
+RUN pip install uv==0.8.11
 
 # Copy Python dependency descriptor
 COPY pyproject.toml ./
