Reverted dockerfile except last line

--- a/lambda/secret-sharing-service/Dockerfile
+++ b/lambda/secret-sharing-service/Dockerfile
@@ -3,17 +3,14 @@ FROM public.ecr.aws/lambda/python:3.12
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
-# Install system dependencies
-RUN yum install -y gcc python3-devel
+# Install uv using pip
+RUN pip install uv==0.8.11
 
 # Copy requirements first to leverage Docker cache
 COPY pyproject.toml ./
 
 # Install dependencies directly using pip
-RUN pip install --no-cache-dir \
-    boto3>=1.40.11 \
-    cryptography>=45.0.6 \
-    pgpy>=0.6.0
+RUN uv pip install --no-cache-dir --target . .
 
 # Copy Lambda function code
 COPY *.py .
