--- a/.github/actions/trigger-secret-sharing/action.yml
+++ b/.github/actions/trigger-secret-sharing/action.yml
@@ -83,7 +83,7 @@ runs:
       working-directory: platform-repo/lambda/secret-sharing-service
       run: |
         IMAGE_URI="957129869060.dkr.ecr.eu-west-1.amazonaws.com/ecr-mercury-dev-euwe1-shared-service_secret-sharing:latest"
-        docker build --provenance=false --platform linux/amd64 -t $IMAGE_URI .
+        docker build --provenance=false --platform linux/arm64 -t $IMAGE_URI .
         docker push $IMAGE_URI
 
     - name: Terraform Init
